--- a/marine_animals_app.ipynb
+++ b/marine_animals_app.ipynb
@@ -475,6 +475,7 @@
       "source": [
         "from fastai.vision.all import *\n",
         "from fastai.vision.widgets import *"
+         "from ipywidgets import *"
       ],
       "execution_count": null,
       "outputs": []
